--- a/TDS Reader Behavior Analysis - LDA.ipynb
+++ b/TDS Reader Behavior Analysis - LDA.ipynb
@@ -31,7 +31,7 @@
     "%matplotlib inline\n",
     "\n",
     "# dataset paths\n",
-    "posts_csv = r'C:\\Users\\ssptit\\OneDrive - SAS\\Medium\\tds_scrape\\posts_df.csv'\n",
+    "posts_csv = r'\\path\\to\\posts_df.csv'\n",
     "pd.options.display.max_colwidth = 100"
    ]
   },
